@@ -1,5 +1,6 @@
 1.0.3 release
 
+	* improve DHT bootstrapping and periodic refresh
 	* improve DHT maintanence performance (by pinging instead of full lookups)
 	* fix bug in DHT routing table node-id prefix optimization
 	* fix incorrect behavior of flag_use_resume_save_path
